--- a/templates/result.html
+++ b/templates/result.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+text-align:center; background-image: url(https://thumb.mt.co.kr/06/2020/09/2020091412287650033_1.jpg);<!DOCTYPE html>
 <html>
     <head>
         <title>answer</title>
