--- a/templates/page.html
+++ b/templates/page.html
@@ -5,10 +5,10 @@
     <style type="text/css">
       body { margin: 0 auto; padding: 0; }
       #container { width: 100%; }
-      .left { float:left; width: 46%; background-image: url(http://www.breaknews.com/imgdata/breaknews_com/201601/2016010732011197.png); }
+      .left { float:left; width: 46%; background-image: url(); }
       .center { float:left; width:7%; float:left;}
       .poscenter { margin-top: 300px; }
-      .right { float:right; width:46%; text-align:center; background-image: url(https://thumb.mt.co.kr/06/2020/09/2020091412287650033_1.jpg); }
+      .right { float:right; width:46%; text-align:center; background-image: url(); }
 </style>
   </head>
   <body>
