--- a/templates/index.html
+++ b/templates/index.html
@@ -3,49 +3,66 @@
   <head>
     <title>Home page</title>
     <style type="text/css">
-      .left { float:left; width:50%; }
+      #container { width: 100%;}
+      .left { float:left; width:50%; background-image: url(https://img.freepik.com/free-vector/abstract-blue-geometric-shapes-background_1035-17545.jpg?w=1380&t=st=1679811971~exp=1679812571~hmac=b4e6a4b99c3ddebc1b9f0ed4f86bfa462bedbb1f1f39ba218110d7e6ec7e0f8f);}
       .right { float:right; width:50%; }
 </style>
   </head>
   <body>
-    <div class="left">
-      <h1>Quant A.I</h1>
-      <h2>Enter Code : </h2>
-      <textarea id="userinput" name="userinput" cols="100" rows="50"> </textarea>
-      <br><br>
-      <button onclick="createFile(); location.href='https://4444-x3n064-velia-c3c948rifdr.ws-us92.gitpod.io/answer'">Request</button>
-      <script>
-        function createFile() {
-          var userinput = document.getElementById("userinput").value;
-          if (userinput === "") {
-            alert("Please enter a input");
-            return;
-          }
-          // Check if the word to remove exists in the string
-          var wordToRemove = '?'
-          if (userinput.includes(wordToRemove)) {
-            // Remove the word from the string
-            var newuserinput = userinput.replace(wordToRemove, "");
-          } 
-          var command = 'echo "'+newuserinput+'" > userinput.txt';
-          var result = runCommand(command);;
-        }
-        function runCommand(command) {
-          var result = "";
-          var xhr = new XMLHttpRequest();
-          xhr.open("GET", "/runcommand/" + command, false);
-          xhr.onreadystatechange = function() {
-            if (xhr.readyState === 4 && xhr.status === 200) {
-              result = xhr.responseText;
+    <div id = "container">
+      <div class="left">
+        <h1>Quant A.I</h1>
+        <h2>Enter Code : </h2>
+        <textarea id="userinput" name="userinput" cols="100" rows="50"> </textarea>
+        <br><br>
+      </div>
+      <div class="center poscenter"> 
+        <select id="hobby" name="hobby" style="text-align:center;">
+          <option value="Python">Python</option>
+          <option value="C">C</option>
+          <option value="C++">C++</option>
+          <option value="Java">Java</option>
+          <option value="JavaScript">JavaScript</option>
+          <option value="Go">Go</option>
+          <option value="PHP">PHP</option>
+        </select>
+
+        <button onclick="createFile(); location.href='https://4444-x3n064-velia-c3c948rifdr.ws-us92.gitpod.io/answer'">Request</button>
+          <script>
+            function createFile() {
+              var userinput = document.getElementById("userinput").value;
+              if (userinput === "") {
+                alert("Please enter a input");
+                return;
+              }
+              // Check if the word to remove exists in the string
+
+              var wordToRemove = '?'
+              if (userinput.includes(wordToRemove)) {
+                // Remove the word from the string
+                userinput = userinput.replace(wordToRemove, "");
+              } 
+              var hobby = document.getElementById("hobby").value;
+              var command = 'echo "'+'change this to ' + hobby +' code '+ userinput+'" > userinput.txt';
+              var result = runCommand(command);;
             }
-          };
-          xhr.send();
-          return result;
-        }
-      </script>
-    </div>
-    <div class="right">
-      <br><br>
+            function runCommand(command) {
+              var result = "";
+              var xhr = new XMLHttpRequest();
+              xhr.open("GET", "/runcommand/" + command, false);
+              xhr.onreadystatechange = function() {
+                if (xhr.readyState === 4 && xhr.status === 200) {
+                  result = xhr.responseText;
+                }
+              };
+              xhr.send();
+              return result;
+            }
+          </script>
+      </div>
+      <div class="right">
+        <br><br>
+      </div>
     </div>
   </body>
 </html>
